# dockerfiles

./: .gitignore  .gitmodules  .hadolint.yaml  .travis.yml  BUILD.bazel  Makefile  Makefile.pm  README.md  circle.yml  docker-compose.yml  heroku.yml
.circleci/: build-image  config.yml  wait-image
.github/: settings.yml
alpine-s390x/: Dockerfile
bazel/: .dockerignore  Dockerfile  README.md  arion-compose.nix  arion-pkgs.nix  build.sh
bazel-cache/: Dockerfile
buildfarm/: .gitignore  Makefile  compose.yml  default.nix  server.Dockerfile  worker.Dockerfile
buildfarm/test/: .bazelrc  .gitignore  BUILD.bazel  WORKSPACE  integration_test  testlib.c  testprog.c
built/: Dockerfile  Makefile
compcert/: Dockerfile
doxygen/: Dockerfile
flutter-web/: Dockerfile
frama-c/: Dockerfile
freebsd/: .nocache  .nopush  Dockerfile  Makefile
ghc/: configure
ghc-android/: Makefile  NOTES  README.md  circle.yml  configure
ghc-android-hstox/: Makefile  configure
haskell/: Dockerfile  stack.yaml
infer/: Dockerfile
kythe/: Makefile
nacl/: Dockerfile  install-nacl.sh
pkgsrc/: Dockerfile
qtox/: build_extra_cmake_modules.sh  build_ffmpeg.sh  build_gdb_windows.sh  build_glfw.sh  build_gmp_windows.sh  build_hunspell.sh  build_kimageformats.sh  build_ldqt_linux.sh  build_libexif.sh  build_libexpat_windows.sh  build_libunwind.sh  build_libunwind_macos.sh  build_mingw_ldd_windows.sh  build_mpfr_windows.sh  build_nsisshellexecasuser_windows.sh  build_openal.sh  build_openssl.sh  build_opus.sh  build_qrencode.sh  build_qt_linux.sh  build_qt_macos.sh  build_qtsvg.sh  (+35 more)
(+204 files in other folders)
